--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "pyventex"
+name = "pyventus"
 dynamic = ["version"]
 description = "A versatile Python library for managing multiple, decoupled event emitters."
 readme = "README.md"
@@ -33,4 +33,4 @@ Repository = "https://github.com/NachoDPP/pyeelib"
 all = []
 
 [tool.hatch.version]
-path = "src/pyventex/__init__.py"
+path = "src/pyventus/__init__.py"
