--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,18 +40,19 @@ repo_name: mdapena/pyventus
 repo_url: https://github.com/mdapena/pyventus
 
 markdown_extensions:
+  - attr_list
+  - md_in_html
+  - pymdownx.arithmatex:
+      generic: true
   - pymdownx.highlight:
       anchor_linenums: true
   - pymdownx.inlinehilite
   - pymdownx.snippets
   - admonition
-  - pymdownx.arithmatex:
-      generic: true
   - footnotes
   - pymdownx.details
   - pymdownx.superfences
   - pymdownx.mark
-  - attr_list
   - abbr
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
@@ -63,8 +64,9 @@ markdown_extensions:
 nav:
   - Pyventus: index.md
   - Getting Started: getting-started.md
-  - API Documentation: api.md
   - Examples: examples.md
+  - API Reference: api-reference.md
+  - Help: help.md
 
 copyright: |
   &copy; 2023 <a href="https://github.com/mdapena" target="_blank" rel="mdapena">Manuel Da Pena</a>
