--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,9 @@ build-backend = "hatchling.build"
 [project]
 name = "pyventus"
 dynamic = ["version"]
-description = "A versatile Python library for managing multiple, decoupled event emitters."
+description = "A modern and robust Python package for event-driven programming that goes beyond traditional event emitter libraries."
 readme = "README.md"
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 license = { file = "LICENSE" }
 authors = [
     { name = "Manuel Da Pena", email = "dapensoft@gmail.com" },
@@ -20,7 +20,6 @@ classifiers = [
     "Operating System :: OS Independent",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -44,9 +43,9 @@ dependencies = []
 # ------------------------------------------------------------------
 
 [project.urls]
-Homepage = "https://github.com/NachoDPP/pyventus"
-Documentation = "https://github.com/NachoDPP/pyventus"
-Repository = "https://github.com/NachoDPP/pyventus"
+Homepage = "https://github.com/mdapena/pyventus"
+Documentation = "https://github.com/mdapena/pyventus"
+Repository = "https://github.com/mdapena/pyventus"
 
 # ------------------------------------------------------------------
 # | Project Optional dependencies                                  |
@@ -67,10 +66,11 @@ all = [
 dependencies = [
     "pytest>=7.4.0",
     "pytest-asyncio>=0.21.0",
+    "fakeredis>=2.20.0",
     "rq>=1.15.0",
 ]
 [tool.hatch.envs.test.scripts]
-test = "pytest -v"
+run = "pytest -v"
 
 # ------------------------------------------------------------------
 # | Hatch docs environment                                         |
