--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Test
+name: Tests
 
 on:
   push:
@@ -31,13 +31,7 @@ jobs:
         run: python -m pip install --upgrade pip
 
       - name: Install dependencies
-        run: pip install -e .[tests]
+        run: pip install hatch
 
-      - name: Check types
-        run: mypy
-
-      - name: Check formatting
-        run: black --check --diff .
-
-      - name: Run tests
-        run: pytest tests
+      - name: Run all tests
+        run: hatch run +py=${{ matrix.python-version }} tests:all
