--- a/pyproject.toml
+++ b/pyproject.toml
@@ -142,6 +142,7 @@ dependencies = [
     "mkdocs-material>=9.4.0",
     "mkdocstrings[python]>=0.24.0",
     "mkdocs-git-revision-date-localized-plugin>=1.2.1",
+    "mkdocs-git-authors-plugin>=0.7.2",
 ]
 [tool.hatch.envs.docs.scripts]
 build = "mkdocs build --clean --strict"
