--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -35,5 +35,5 @@ jobs:
           path: .cache
           restore-keys: |
             mkdocs-material-
-      - run: pip install mkdocs-material mkdocstrings[python] mkdocs-git-revision-date-localized-plugin .
+      - run: pip install . mkdocs-material mkdocstrings[python] mkdocs-git-revision-date-localized-plugin mkdocs-git-authors-plugin
       - run: mkdocs gh-deploy --force
