--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,7 @@ dependencies = []
 
 [project.urls]
 Homepage = "https://github.com/mdapena/pyventus"
-Documentation = "https://github.com/mdapena/pyventus#readme"
+Documentation = "https://mdapena.github.io/pyventus"
 Repository = "https://github.com/mdapena/pyventus"
 
 # ------------------------------------------------------------------
