--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,17 +10,19 @@ build-backend = "hatchling.build"
 name = "pyventus"
 dynamic = ["version"]
 description = "A modern and robust Python package for event-driven programming. Define, emit, and orchestrate events with ease using customizable event emitters and flexible responses."
-readme = "README.md"
 requires-python = ">=3.10"
-license = { file = "LICENSE" }
+readme = "README.md"
+license = "MIT"
 authors = [
     { name = "Manuel Da Pena", email = "dapensoft@gmail.com" },
 ]
+keywords = ["events", "event-emitters", "event-dispatchers", "event-handlers", "event-linkers", "event-driven", "python"]
 classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
     "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -30,14 +32,6 @@ classifiers = [
     "Topic :: Software Development",
     "Typing :: Typed",
 ]
-keywords = ["events", "event emitters", "event handlers", "event linkers"]
-
-# ------------------------------------------------------------------
-# | Project Dependencies                                           |
-# ------------------------------------------------------------------
-# Pure Python implementation, no dependencies needed
-
-dependencies = []
 
 # ------------------------------------------------------------------
 # | Project URLs                                                   |
