--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,7 @@ tests = [
     "coverage[toml]>=7.3.3",
     "pytest-asyncio>=0.21.0",
     "fakeredis>=2.20.0",
+    "httpx>=0.23.0",
 ]
 
 # --------------------
