--- a/pyproject.toml
+++ b/pyproject.toml
@@ -125,6 +125,7 @@ cov = [
     "coverage run -m pytest -v {args:tests}",
     "- coverage combine",
     "coverage report",
+    "coverage xml",
 ]
 all = [
     "style",
@@ -156,7 +157,6 @@ serve = "mkdocs serve --dev-addr localhost:8000"
 
 [tool.coverage.run]
 source_pkgs = ["pyventus", "tests"]
-branch = true
 parallel = true
 omit = [
     "tests/conftest.py",
