Revert "Add Codecov to tests workflow"
This reverts commit 64e5e88b00ad92286e7644cebece21c1d8143502.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -125,7 +125,6 @@ cov = [
     "coverage run -m pytest -v {args:tests}",
     "- coverage combine",
     "coverage report",
-    "coverage xml",
 ]
 all = [
     "style",
@@ -157,6 +156,7 @@ serve = "mkdocs serve --dev-addr localhost:8000"
 
 [tool.coverage.run]
 source_pkgs = ["pyventus", "tests"]
+branch = true
 parallel = true
 omit = [
     "tests/conftest.py",
