--- a/pyproject.toml
+++ b/pyproject.toml
@@ -121,7 +121,11 @@ dependencies = ["pyventus[tests]"]
 test = "pytest -v {args:tests}"
 style = "black --check --diff {args:.}"
 typing = "mypy"
-cov = "coverage run -m pytest -v {args:tests}"
+cov = [
+    "coverage run -m pytest -v {args:tests}",
+    "- coverage combine",
+    "coverage report",
+]
 all = [
     "style",
     "typing",
