Update run-tests.yml workflow to support upload-artifact@v4

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -37,15 +37,15 @@ jobs:
         run: mkdir coverage
 
       - name: Run all tests
+        run: hatch run +py=${{ matrix.python-version }} tests:all
         env:
           COVERAGE_FILE: coverage/.coverage.${{ runner.os }}-py${{ matrix.python-version }}
           CONTEXT: ${{ runner.os }}-py${{ matrix.python-version }}
-        run: hatch run +py=${{ matrix.python-version }} tests:all
 
       - name: Store coverage files
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: coverage
+          name: coverage-${{ matrix.os }}-${{ matrix.python-version }}
           path: coverage
 
   coverage-combine:
@@ -63,9 +63,10 @@ jobs:
           python-version: "3.8"
 
       - name: Get coverage files
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
-          name: coverage
+          merge-multiple: true
+          pattern: coverage-*
           path: coverage
 
       - name: Install dependencies
