--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -72,6 +72,8 @@ jobs:
       - name: Install dependencies
         run: pip install coverage[toml]
 
+      - run: pip install .[all]
+
       - run: ls -la coverage
 
       - name: Combine coverage files
