Update Coveralls workflow for accurate XML reports

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -39,6 +39,8 @@ jobs:
       - name: Coveralls Parallel
         uses: coverallsapp/github-action@v2
         with:
+          format: python
+          files: coverage.xml
           flag-name: py${{ matrix.python-version }}-${{ matrix.os }}
           parallel: true
 
